# JOPA

./: .gitignore  LICENSE  README.md  notebook.py  pyproject.toml
.github/workflows/: ci.yml
docs/: grounded_model.md
examples/: controlled_digits.py  end_to_end_digits.py  pendulum.py  pendulum_filtered.py  pendulum_physics.py  pendulum_stabilize.py  pusht_multimodal_surprise.md  pusht_multimodal_surprise.py  rotating_digits.py
jopa/: __init__.py  blocks.py  data.py  defaults.py  diagnostics.py  distributions.py  em.py  inference.py  message_passing.py  physics.py  validate.py
jopa/envs/: __init__.py  pendulum.py
jopa/nn/: __init__.py  vae.py
jopa/nodes/: __init__.py  observation.py  transition.py
outputs/pusht_surprise/: coupling_regression_metrics.csv  one_block_test_metrics.csv  one_block_train_metrics.csv  summary.json  test_metrics.csv  train_metrics.csv  two_block_test_metrics.csv  two_block_train_metrics.csv
tests/: test_blocks.py  test_diagnostics.py  test_examples_smoke.py  test_transition_node.py  test_validate.py
